k8s-deploy/alertmanager.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsm-alertmanager
spec:
  selector:
    matchLabels:
      app: tsm-alertmanager
  replicas: 1
  template:
    metadata:
      labels:
        app: tsm-alertmanager
    spec:
      containers:
      - name: sidecar
        image: alpine:3.9
        command: ["/bin/sh"]
        args: ["/tmp/runapp.sh"]
        volumeMounts:
        - name: alertmanager-configs
          mountPath: /scrapers
        - name: tsm-sidecar
          mountPath: /tmp
      - name: alertmanager
        image: prom/alertmanager:v0.20.0
        resources:
          requests:
            memory: "500Mi"
            cpu: "500m"
          limits:
            memory: "1000Mi"
            cpu: "1000m"
        args:
          - "--config.file=/scrapers/alertmanager_config.yml"
          - "--storage.path=/alertmanager"
        ports:
        - name: alertmanager
          containerPort: 9093
        volumeMounts:
        - name: alertmanager-configs
          mountPath: /scrapers
      volumes:
        - name: alertmanager-configs
          emptyDir: {}
        - name: tsm-sidecar
          configMap:
            name: tsm-alertmanager-sidecar

---
apiVersion: v1
kind: Service
metadata:
    name: tsm-alertmanager-web
spec:
    type: NodePort
    ports:
    - port: 9093
      protocol: TCP
      targetPort: 9093
    selector:
      app: tsm-alertmanager
    sessionAffinity: None
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tsm-alertmanager
  annotations:
      kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: alertmanager.tsm
    http:
      paths:
      - path: /
        backend:
          serviceName: tsm-alertmanager-web
          servicePort: 9093
