k8s-deploy/grafana.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsm-grafana
spec:
  selector:
    matchLabels:
      app: tsm-grafana
  replicas: 1
  template:
    metadata:
      labels:
        app: tsm-grafana
    spec:
      containers:
      - name: sidecar
        image: alpine:3.9
        command: ["/bin/sh"]
        args: ["/tmp/runapp.sh"]
        volumeMounts:
        - name: grafana-dashboards
          mountPath: /dashboards
        - name: tsm-sidecar
          mountPath: /tmp
      - name: grafana
        image: grafana/grafana:6.6.0
        resources:
          requests:
            memory: "500Mi"
            cpu: "500m"
          limits:
            memory: "1000Mi"
            cpu: "1000m"
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: tsm-grafana-files
          mountPath: /etc/grafana/provisioning/datasources/defaultds.yaml
          subPath: defaultds.yaml
        - name: tsm-grafana-files
          mountPath: /etc/grafana/provisioning/dashboards/dashboards.yaml
          subPath: dashboards.yaml
        - name: grafana-dashboards
          mountPath: /dashboards
      volumes:
        - name: grafana-dashboards
          emptyDir: {}
        - name: tsm-sidecar
          configMap:
            name: tsm-grafana-sidecar
        - name: tsm-grafana-files
          configMap:
            name: tsm-grafana-config
---
apiVersion: v1
kind: Service
metadata:
    name: tsm-grafana-web
spec:
    type: NodePort
    ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
    selector:
      app: tsm-grafana
    sessionAffinity: None
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tsm-grafana
  annotations:
      kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: grafana.tsm
    http:
      paths:
      - path: /
        backend:
          serviceName: tsm-grafana-web
          servicePort: 3000
