k8s-deploy/jenkins.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsm-jenkins
spec:
  selector:
    matchLabels:
      app: tsm-jenkins
  replicas: 1
  template:
    metadata:
      labels:
        app: tsm-jenkins
    spec:
      serviceAccount: tsm-engine
      containers:
      - name: jenkins
        image: jenkinsci/blueocean:1.14.0
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"        
        ports:
        - containerPort: 8080
        - containerPort: 50000
        volumeMounts:
        - name: jenkins-files
          mountPath: /var/jenkins_home/init.groovy.d
        - name: jenkinsadmin
          readOnly: true
          mountPath: "/var/run/secrets/jenkinsadmin"
      volumes:
        - name: jenkins-files
          configMap:
            name: tsm-jenkins-config
        - name: jenkinsadmin
          secret:
            secretName: jenkins-admin

---
apiVersion: v1
kind: Service
metadata:
    name: tsm-jenkins-web
spec:
    type: NodePort
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: tsm-jenkins
---
apiVersion: v1
kind: Service
metadata:
    name: tsm-jenkins-slaveport
spec:
    type: ClusterIP
    ports:
    - port: 50000
      protocol: TCP
      targetPort: 50000
    selector:
      app: tsm-jenkins
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tsm-jenkins
  annotations:
      kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: jenkins.tsm
    http:
      paths:
      - path: /
        backend:
          serviceName: tsm-jenkins-web
          servicePort: 8080
