k8s-deploy/jupyter.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsm-jupyter
spec:
  selector:
    matchLabels:
      app: tsm-jupyter
  replicas: 1
  template:
    metadata:
      labels:
        app: tsm-jupyter
    spec:
      containers:
      - name: sidecar
        image: alpine:3.9
        command: ["/bin/sh"]
        args: ["/tmp/runapp.sh"]
        volumeMounts:
        - name: jupyter-pkgs
          mountPath: /packages
        - name: tsm-sidecar
          mountPath: /tmp
      - name: jupyter
        image: jupyter/scipy-notebook
        resources:
          requests:
            memory: "500Mi"
            cpu: "500m"
          limits:
            memory: "1000Mi"
            cpu: "1000m"   
        ports:
        - containerPort: 8888
        - containerPort: 9999
        command: ["sh"]
        args: ["/tmp/runapp.sh"]
        volumeMounts:
        - name: jupyter-files
          mountPath: /tmp
        - name: jupyter-pkgs
          mountPath: /home/jovyan/Packages
      volumes:
        - name: jupyter-files
          configMap:
            name: tsm-jupyter-config
        - name: jupyter-pkgs
          emptyDir: {}
        - name: tsm-sidecar
          configMap:
            name: tsm-jupyter-sidecar
---
apiVersion: v1
kind: Service
metadata:
    name: tsm-jupyter-web
spec:
    type: NodePort
    ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
    selector:
      app: tsm-jupyter
---
apiVersion: v1
kind: Service
metadata:
    name: tsm-jupyter-helper
spec:
    type: NodePort
    ports:
    - port: 9999
      protocol: TCP
      targetPort: 9999
    selector:
      app: tsm-jupyter
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tsm-jupyter
  annotations:
      kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: jupyter.tsm
    http:
      paths:
      - path: /
        backend:
          serviceName: tsm-jupyter-web
          servicePort: 8888
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tsm-jupyter-helper
  annotations:
      kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: jupyter-helper.tsm
    http:
      paths:
      - path: /
        backend:
          serviceName: tsm-jupyter-helper
          servicePort: 9999
