k8s-deploy/webhook.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsm-webhook
spec:
  selector:
    matchLabels:
      app: tsm-webhook
  replicas: 1
  template:
    metadata:
      labels:
        app: tsm-webhook
    spec:
      containers:
      - name: webhook
        image: python:3.7.3-alpine3.9
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        command: ["/bin/sh"]
        args: ["/tmp/webhook/run.sh"]
        volumeMounts:
        - name: webhook-files
          mountPath: /tmp/webhook
      volumes:
        - name: webhook-files
          configMap:
            name: tsm-webhook-files
---
apiVersion: v1
kind: Service
metadata:
    name: tsm-webhook-web
spec:
    type: NodePort
    ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
    selector:
      app: tsm-webhook
    sessionAffinity: None
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tsm-webhook
  annotations:
      kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: webhook.tsm
    http:
      paths:
      - path: /
        backend:
          serviceName: tsm-webhook-web
          servicePort: 5000
